.deploy/prod/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddproj-django
spec:
  selector:
    app: ddproj-django
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30880
      name: ddproj
